Adjust image size and footer spacing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
     <link rel="stylesheet" href="assets/css/style.css">
         
-    <title>Document</title>
+    <title>Five Elements</title>
 </head>
 <body>
     <header>
@@ -26,18 +26,21 @@
         <div id="message"></div>
         <div class="player">
             <h3 class="scores">Your score: <span id="play-score">0</span></h3>
-            <image id="player-image" src="assets/images/five elements.png" alt="Five Elements"></image>
+            <div class="container">
+                <image id="player-image" src="assets/images/five elements.png" alt="Five Elements"></image>
+            </div>            
         </div>
         <div class="computer">
             <h3 class="scores">Computer score: <span id="computer-score">0</span></h3>
-            <image id="Computer-image" src="assets/images/five elements.png" alt="Five Elements"></image>
+            <div class="container">
+                <image id="Computer-image" src="assets/images/five elements.png" alt="Five Elements"></image>
+            </div>            
         </div>
     </section>
 
     <footer>
-        <h3>Rules</h3>
         <p>The Generating/gen. Cycle: Metal gen. Water gen. Wood gen. Fire gen. Earth gen. Metal</p>
-        <p>The Controlling/con. Cycle: Metal con. Wood con. Earth con. Water con. Fire con. Metal</p>
+        <p>The Controlling/con. Cycle: Metal con. Wood con. Earth con. Water con. Fire con. Metal</p>               
     </footer>
 
     <script src="assets/js/script.js"></script>
