Fix the overall structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section class="game-area">
-        <div>
+        <div id="makechoice-heading">
             <p>Make a choice:</p>
             <button aria-label="Metal" data-choice="0" class="control">Metal</button>
             <button aria-label="Wood" data-choice="1" class="control">Wood</button>
@@ -24,21 +24,22 @@
             <button aria-label="Earth" data-choice="4" class="control">Earth</button>
         </div>
         <div id="message"></div>
-        <div class="player">
-            <h3 class="scores">Your score: <span id="play-score">0</span></h3>
-            <div class="container">
+        <div id="flex-container">
+            <div class="player">
+                <h3 class="scores">Your score: <span id="play-score">0</span></h3>                       
+            </div>
+            <div id="image-container">
                 <image id="player-image" src="assets/images/five elements.png" alt="Five Elements"></image>
-            </div>            
+            </div> 
+            <div class="computer">
+                <h3 class="scores">Computer score: <span id="computer-score">0</span></h3>                        
+            </div>
         </div>
-        <div class="computer">
-            <h3 class="scores">Computer score: <span id="computer-score">0</span></h3>
-            <div class="container">
-                <image id="Computer-image" src="assets/images/five elements.png" alt="Five Elements"></image>
-            </div>            
-        </div>
+        
     </section>
 
     <footer>
+        <h4>Rules</h4>
         <p>The Generating/gen. Cycle: Metal gen. Water gen. Wood gen. Fire gen. Earth gen. Metal</p>
         <p>The Controlling/con. Cycle: Metal con. Wood con. Earth con. Water con. Fire con. Metal</p>               
     </footer>
