Add js random for opponent and check for winner

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div id="flex-container">
 
             <div class="player">
-                <h3 class="scores">Your score: <span id="play-score">0</span></h3> 
-                <img id="player-choice">                                                   
+                <h3 class="scores">Your score: <span id="your-score">0</span></h3>                 
+                <img id="your-choice">                                                   
             </div>
 
             <div id="image-container">
@@ -27,17 +27,13 @@
             </div> 
 
             <div class="computer">
-                <h3 class="scores">Computer score: <span id="computer-score">0</span></h3> 
-                <img id="computer-choice">                         
+                <h3 class="scores">Computer score: <span id="opponent-score">0</span></h3> 
+                <img id="opponent-choice">                         
             </div>
         </div>
 
         <div id="choices">
-            <img id="Metal" src="assets/images/Metal.png">
-            <img id="Wood" src="assets/images/Wood.png">
-            <img id="Water" src="assets/images/Water.png">
-            <img id="Fire" src="assets/images/Fire.png">
-            <img id="Earth" src="assets/images/Earth.png">
+
         </div>
         
     </section>
