function else if error fixed, but still, click wood nothing happening, cannot find the bug.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h2>Five Elements</h2>
+        <h1>Five Elements</h1>
     </header>
 
     <section class="game-area">        
@@ -32,9 +32,9 @@
             </div>
         </div>
 
-        <div id="choices">
+        <div id="makeChoice">Make a Choice</div>
 
-        </div>
+        <div id="choices"></div>
         
     </section>
 
