Change responsive design to player and computer box

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img id="your-choice">                                                   
             </div>
 
-            <div id="image-container">
+            <div class="image-container">
                 <image id="five-elements-image" src="assets/images/five elements.png" alt="Five Elements"></image>
             </div> 
 
