changed the layout for big screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Five Elements</h1>
+        <h2>Five Elements</h2>
     </header>
 
     <section class="game-area">        
@@ -23,7 +23,11 @@
             </div>
 
             <div class="image-container">
-                <image id="five-elements-image" src="assets/images/five elements.png" alt="Five Elements"></image>
+                <div class="empty-div"></div>
+                <div>
+                    <image id="five-elements-image" src="assets/images/five elements.png" alt="Five Elements"></image>
+                </div>
+                
             </div> 
 
             <div class="computer">
