added the rules for the game

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h3 class="scores">Computer score: <span id="opponent-score">0</span></h3> 
                 <img id="opponent-choice">                         
             </div>
-            
+
         </div>
 
         <div id="makeChoice">Make a Choice</div>
@@ -45,6 +45,9 @@
     </section>
     
     <footer>
+        <h4>Rules</h4>
+        <p>If your oppoent generates you, you win one score.</p>
+        <p>If your oppoent controls you, your opponent gets one score.</p>
         <h4>Theory</h4>
         <p>The Wu Xing, commonly known as the Five Elements of nature are phases of movement or change. The theory of Wu Xing is central to the practice of Chinese Medicine. 
             They describe stages of the constantly moving cycle between Yin and Yang. The Five Elements include Wood, Fire, Earth, Metal and Water.</p>
